--- a/AvelourLuxe.html
+++ b/AvelourLuxe.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AeroLuxe</title>
-    <link rel="stylesheet" href="AeroLuxe.css" />
+    <title>AvélourLuxe</title>
+    <link rel="stylesheet" href="AvelourLuxe.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cinzel:wght@400..900&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap"
       rel="stylesheet"
@@ -12,9 +12,9 @@
   </head>
   <body>
     <main>
-      <img src="/Images/AeroLuxe.jpg" alt="AeroLuxe" />
+      <a id="center" href="AvelourLuxe.html"><img src="/Images/AvelourLuxe-removebg.png" alt="AvelourLuxe" id="symbol"/></a>
       <p class="luxury-text">
-        AeroLuxe is more than a name—it's an experience. Where modern design
+        AvelourLuxe is more than a name—it's an experience. Where modern design
         meets timeless elegance, crafted to elevate every detail of your
         journey.
       </p>
