--- a/AvelourDash.html
+++ b/AvelourDash.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AeroFlow</title>
+    <title>AvélourDash</title>
 </head>
 <body>
     
