--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AeroZone</title>
-    <link rel="stylesheet" href="AeroZone.css" />
+    <title>Avélour Zénaire</title>
+    <link rel="stylesheet" href="AvelourZenaire.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cinzel:wght@400..900&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="jpg/jpeg/image" href="/Images/AeroZone.jpg" />
+    <link rel="icon" type="jpg/jpeg/image" href="/Images/AZ.jpg" />
   </head>
   <body>
     <header>
-      <h1 id="heading">AEROZONE</h1>
+      <h1 id="heading">Avélour Zénaire</h1>
       <pre id="intro">
           Welcome to AeroZone
           Your gateway to a world where elegance meets ease. Step into a timeless shopping experience, reimagined for the digital age — where every product tells a story,
@@ -24,36 +24,36 @@
     </header>
     <main>
       <section class="type">
-        <h2 id="h2" class="category">AeroLuxe</h2>
+        <h2 id="h2" class="category">AvélourLuxe</h2>
         <pre>
                 <h3 id="luxe" class="caption">Where timeless elegance meets the finest craftsmanship.</h3>
             </pre>
-        <a href="AeroLuxe.html"
+        <a href="AvelourLuxe.html"
           ><img
             class="logo"
-            src="/Images/AeroLuxe.jpg"
-            alt="AeroLuxe"
+            src="/Images/AvelourLuxe.png"
+            alt="AvelourLuxe"
             id="Luxury"
         /></a>
       </section>
 
       <section class="type">
-        <h2 id="h3" class="category">AeroFlow</h2>
+        <h2 id="h3" class="category">AvélourFlow</h2>
         <pre>
             <h3 id="flow" style="font-size: 25px;" class="caption">Everyday style, effortlessly within reach.</h3>
           </pre>
-        <a href="/AeroFlow.html"
-          ><img class="logo" src="/Images/AeroFlow.jpg" alt="AeroFlow"
+        <a href="/AvelourFlow.html"
+          ><img class="logo" src="/Images/AvelourFlow.png" alt="AvelourFlow"
         /></a>
       </section>
 
       <section class="type">
-        <h2 id="h4" class="category">AeroDash</h2>
+        <h2 id="h4" class="category">AvélourDash</h2>
         <pre>
             <h3 id="dash" class="caption">Fresh essentials, delivered in a heartbeat.</h3>
           </pre>
-        <a href="/AeroDash.html"
-          ><img class="logo" src="/Images/AeroDash.jpg" alt="AeroFlow"
+        <a href="/AvelourDash.html"
+          ><img class="logo" src="/Images/AvelourDash.png" alt="AvelourDash"
         /></a>
       </section>
       <div id="extra"></div>
