--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <header>
-      <h1 id="heading">Avélour Zénaire</h1>
+      <a id="index" href="index.html"><h1 id="heading">Avélour Zénaire</h1></a>
       <pre id="intro">
-          Welcome to AeroZone
+          Welcome to Avélour Zénaire
           Your gateway to a world where elegance meets ease. Step into a timeless shopping experience, reimagined for the digital age — where every product tells a story,
           Every click brings you closer to something special, and every interaction feels personal. From curated collections of premium brands to everyday essentials, 
           We make shopping not just convenient, but a delightful journey. Explore, connect, and let the cloud bring a touch of luxury to your life.
