--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>Avélour Zénaire</title>
     <link rel="stylesheet" href="AvelourZenaire.css" />
     <link
@@ -14,47 +17,51 @@
   <body>
     <header>
       <a id="index" href="index.html"><h1 id="heading">Avélour Zénaire</h1></a>
-      <pre id="intro">
-          Welcome to Avélour Zénaire
-          Your gateway to a world where elegance meets ease. Step into a timeless shopping experience, reimagined for the digital age — where every product tells a story,
-          Every click brings you closer to something special, and every interaction feels personal. From curated collections of premium brands to everyday essentials, 
-          We make shopping not just convenient, but a delightful journey. Explore, connect, and let the cloud bring a touch of luxury to your life.
-                </pre
-      >
+      <div id="intro">
+        Welcome to Avélour Zénaire<br />
+        Your gateway to a world where elegance meets ease. Step into a timeless
+        shopping experience, reimagined for the digital age — where every
+        product tells a story, Every click brings you closer to something
+        special, and every interaction feels personal. From curated collections
+        of premium brands to everyday essentials, We make shopping not just
+        convenient, but a delightful journey. Explore, connect, and let the
+        cloud bring a touch of luxury to your life.
+      </div>
     </header>
     <main>
       <section class="type">
         <h2 id="h2" class="category">AvélourLuxe</h2>
-        <pre>
-                <h3 id="luxe" class="caption">Where timeless elegance meets the finest craftsmanship.</h3>
-            </pre>
-        <a href="AvelourLuxe.html"
-          ><img
+        <h3 id="luxe" class="caption">
+          Where timeless elegance meets the finest craftsmanship.
+        </h3>
+        <a href="AvelourLuxe.html">
+          <img
             class="logo"
             src="/Images/AvelourLuxe.png"
             alt="AvelourLuxe"
             id="Luxury"
-        /></a>
+          />
+        </a>
       </section>
 
       <section class="type">
         <h2 id="h3" class="category">AvélourFlow</h2>
-        <pre>
-            <h3 id="flow" style="font-size: 25px;" class="caption">Everyday style, effortlessly within reach.</h3>
-          </pre>
-        <a href="/AvelourFlow.html"
-          ><img class="logo" src="/Images/AvelourFlow.png" alt="AvelourFlow"
-        /></a>
+        <h3 id="flow" class="caption">
+          Everyday style, effortlessly within reach.
+        </h3>
+        <a href="/AvelourFlow.html">
+          <img class="logo" src="/Images/AvelourFlow.png" alt="AvelourFlow" />
+        </a>
       </section>
 
       <section class="type">
         <h2 id="h4" class="category">AvélourDash</h2>
-        <pre>
-            <h3 id="dash" class="caption">Fresh essentials, delivered in a heartbeat.</h3>
-          </pre>
-        <a href="/AvelourDash.html"
-          ><img class="logo" src="/Images/AvelourDash.png" alt="AvelourDash"
-        /></a>
+        <h3 id="dash" class="caption">
+          Fresh essentials, delivered in a heartbeat.
+        </h3>
+        <a href="/AvelourDash.html">
+          <img class="logo" src="/Images/AvelourDash.png" alt="AvelourDash" />
+        </a>
       </section>
       <div id="extra"></div>
     </main>
