--- a/AvelourDash.html
+++ b/AvelourDash.html
@@ -12,212 +12,217 @@
     <link rel="icon" type="image/png" href="/Images/AD.png" />
   </head>
   <body>
-    <main>
-      <a id="center" href="AvelourDash.html">
-        <img
-          src="/Images/AvelourDash-removebg.png"
-          alt="AvelourDash"
-          id="symbol"
-        />
-      </a>
+    <div class="bg-container">
+      <main>
+        <a id="center" href="AvelourDash.html">
+          <img
+            src="/Images/AvelourDash-removebg.png"
+            alt="AvelourDash"
+            id="symbol"
+          />
+        </a>
 
-      <p class="dash-text">
-        AvélourDash delivers your essentials quickly with style and outstanding
-        quality.
-      </p>
+        <p class="dash-text">
+          AvélourDash delivers your essentials quickly with style and
+          outstanding quality.
+        </p>
 
-      <div class="brand-marquee">
-        <div class="marquee">
-          <span>Blinkit</span>
-          <span>Zepto</span>
-          <span>Swiggy Instamart</span>
-          <span>BigBasket</span>
-          <span>Dunzo</span>
-          <span>JioMart</span>
-          <span>Grofers</span>
-          <span>Nature's Basket</span>
-          <span>Spencer's</span>
-          <span>D-Mart</span>
-          <span>Reliance Fresh</span>
-          <span>FreshToHome</span>
-          <span>Amazon Fresh</span>
-          <span>Instacart</span>
-          <span>Whole Foods</span>
-          <span>Walmart</span>
-          <span>Target</span>
-          <span>Kroger</span>
-          <span>Costco</span>
-          <span>Safeway</span>
-          <span>Shipt</span>
-          <span>FreshDirect</span>
-        </div>
-      </div>
-
-      <nav>
-        <div class="sites">
-          <div class="brand-item">
-            <a class="brand-link" href="https://blinkit.com/">
-              <img src="/Images/Blinkit.jpeg" alt="Blinkit" />
-            </a>
-            <p class="brand-name">Blinkit</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.zepto.co.in/">
-              <img src="/Images/Zepto.jpeg" alt="Zepto" />
-            </a>
-            <p class="brand-name">Zepto</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.swiggy.com/instamart">
-              <img src="/Images/SwiggyInstamart.jpeg" alt="Swiggy Instamart" />
-            </a>
-            <p class="brand-name">Swiggy Instamart</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.bigbasket.com/">
-              <img src="/Images/BigBasket.jpeg" alt="BigBasket" />
-            </a>
-            <p class="brand-name">BigBasket</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.dunzo.com/">
-              <img src="/Images/Dunzo.jpeg" alt="Dunzo" />
-            </a>
-            <p class="brand-name">Dunzo</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.jiomart.com/">
-              <img src="/Images/JioMart.jpeg" alt="JioMart" />
-            </a>
-            <p class="brand-name">JioMart</p>
-          </div>
-
-          <div class="brand-item">
-            <a
-              class="brand-link"
-              href="https://www.flipkart.com/grocery-supermart-store"
-            >
-              <img
-                src="/Images/FlipkartSupermart.jpeg"
-                alt="Flipkart Supermart"
-              />
-            </a>
-            <p class="brand-name">Flipkart Supermart</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.naturesbasket.co.in/">
-              <img src="/Images/NaturesBasket.jpg" alt="Nature's Basket" />
-            </a>
-            <p class="brand-name">Nature's Basket</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.spencers.in/">
-              <img src="/Images/Spencers.jpg" alt="Spencer's" />
-            </a>
-            <p class="brand-name">Spencer's</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.dmart.in/">
-              <img src="/Images/DMart.jpeg" alt="D-Mart" />
-            </a>
-            <p class="brand-name">D-Mart</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.reliancefreshdirect.com/">
-              <img src="/Images/RelianceFresh.jpeg" alt="Reliance Fresh" />
-            </a>
-            <p class="brand-name">Reliance Fresh</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.freshtohome.com/">
-              <img src="/Images/FreshToHome.jpeg" alt="FreshToHome" />
-            </a>
-            <p class="brand-name">FreshToHome</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.amazon.com/fresh">
-              <img src="/Images/AmazonFresh.jpeg" alt="Amazon Fresh" />
-            </a>
-            <p class="brand-name">Amazon Fresh</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.instacart.com/">
-              <img src="/Images/Instacart.jpeg" alt="Instacart" />
-            </a>
-            <p class="brand-name">Instacart</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.wholefoodsmarket.com/">
-              <img src="/Images/WholeFoods.jpeg" alt="Whole Foods" />
-            </a>
-            <p class="brand-name">Whole Foods</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.walmart.com/">
-              <img src="/Images/Walmart.jpeg" alt="Walmart" />
-            </a>
-            <p class="brand-name">Walmart</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.target.com/">
-              <img src="/Images/Target.jpeg" alt="Target" />
-            </a>
-            <p class="brand-name">Target</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.kroger.com/">
-              <img src="/Images/Kroger.jpeg" alt="Kroger" />
-            </a>
-            <p class="brand-name">Kroger</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.costco.com/">
-              <img src="/Images/Costco.jpeg" alt="Costco" />
-            </a>
-            <p class="brand-name">Costco</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.safeway.com/">
-              <img src="/Images/Safeway.jpeg" alt="Safeway" />
-            </a>
-            <p class="brand-name">Safeway</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.shipt.com/">
-              <img src="/Images/Shipt.jpg" alt="Shipt" />
-            </a>
-            <p class="brand-name">Shipt</p>
-          </div>
-
-          <div class="brand-item">
-            <a class="brand-link" href="https://www.freshdirect.com/">
-              <img src="/Images/FreshDirect.jpeg" alt="FreshDirect" />
-            </a>
-            <p class="brand-name">FreshDirect</p>
+        <div class="brand-marquee">
+          <div class="marquee">
+            <span>Blinkit</span>
+            <span>Zepto</span>
+            <span>Swiggy Instamart</span>
+            <span>BigBasket</span>
+            <span>Dunzo</span>
+            <span>JioMart</span>
+            <span>Grofers</span>
+            <span>Nature's Basket</span>
+            <span>Spencer's</span>
+            <span>D-Mart</span>
+            <span>Reliance Fresh</span>
+            <span>FreshToHome</span>
+            <span>Amazon Fresh</span>
+            <span>Instacart</span>
+            <span>Whole Foods</span>
+            <span>Walmart</span>
+            <span>Target</span>
+            <span>Kroger</span>
+            <span>Costco</span>
+            <span>Safeway</span>
+            <span>Shipt</span>
+            <span>FreshDirect</span>
           </div>
         </div>
-      </nav>
 
-      <footer></footer>
-    </main>
+        <nav>
+          <div class="sites">
+            <div class="brand-item">
+              <a class="brand-link" href="https://blinkit.com/">
+                <img src="/Images/Blinkit.jpeg" alt="Blinkit" />
+              </a>
+              <p class="brand-name">Blinkit</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.zepto.co.in/">
+                <img src="/Images/Zepto.jpeg" alt="Zepto" />
+              </a>
+              <p class="brand-name">Zepto</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.swiggy.com/instamart">
+                <img
+                  src="/Images/SwiggyInstamart.jpeg"
+                  alt="Swiggy Instamart"
+                />
+              </a>
+              <p class="brand-name">Swiggy Instamart</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.bigbasket.com/">
+                <img src="/Images/BigBasket.jpeg" alt="BigBasket" />
+              </a>
+              <p class="brand-name">BigBasket</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.dunzo.com/">
+                <img src="/Images/Dunzo.jpeg" alt="Dunzo" />
+              </a>
+              <p class="brand-name">Dunzo</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.jiomart.com/">
+                <img src="/Images/JioMart.jpeg" alt="JioMart" />
+              </a>
+              <p class="brand-name">JioMart</p>
+            </div>
+
+            <div class="brand-item">
+              <a
+                class="brand-link"
+                href="https://www.flipkart.com/grocery-supermart-store"
+              >
+                <img
+                  src="/Images/FlipkartSupermart.jpeg"
+                  alt="Flipkart Supermart"
+                />
+              </a>
+              <p class="brand-name">Flipkart Supermart</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.naturesbasket.co.in/">
+                <img src="/Images/NaturesBasket.jpg" alt="Nature's Basket" />
+              </a>
+              <p class="brand-name">Nature's Basket</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.spencers.in/">
+                <img src="/Images/Spencers.jpg" alt="Spencer's" />
+              </a>
+              <p class="brand-name">Spencer's</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.dmart.in/">
+                <img src="/Images/DMart.jpeg" alt="D-Mart" />
+              </a>
+              <p class="brand-name">D-Mart</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.reliancefreshdirect.com/">
+                <img src="/Images/RelianceFresh.jpeg" alt="Reliance Fresh" />
+              </a>
+              <p class="brand-name">Reliance Fresh</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.freshtohome.com/">
+                <img src="/Images/FreshToHome.jpeg" alt="FreshToHome" />
+              </a>
+              <p class="brand-name">FreshToHome</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.amazon.com/fresh">
+                <img src="/Images/AmazonFresh.jpeg" alt="Amazon Fresh" />
+              </a>
+              <p class="brand-name">Amazon Fresh</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.instacart.com/">
+                <img src="/Images/Instacart.jpeg" alt="Instacart" />
+              </a>
+              <p class="brand-name">Instacart</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.wholefoodsmarket.com/">
+                <img src="/Images/WholeFoods.jpeg" alt="Whole Foods" />
+              </a>
+              <p class="brand-name">Whole Foods</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.walmart.com/">
+                <img src="/Images/Walmart.jpeg" alt="Walmart" />
+              </a>
+              <p class="brand-name">Walmart</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.target.com/">
+                <img src="/Images/Target.jpeg" alt="Target" />
+              </a>
+              <p class="brand-name">Target</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.kroger.com/">
+                <img src="/Images/Kroger.jpeg" alt="Kroger" />
+              </a>
+              <p class="brand-name">Kroger</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.costco.com/">
+                <img src="/Images/Costco.jpeg" alt="Costco" />
+              </a>
+              <p class="brand-name">Costco</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.safeway.com/">
+                <img src="/Images/Safeway.jpeg" alt="Safeway" />
+              </a>
+              <p class="brand-name">Safeway</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.shipt.com/">
+                <img src="/Images/Shipt.jpg" alt="Shipt" />
+              </a>
+              <p class="brand-name">Shipt</p>
+            </div>
+
+            <div class="brand-item">
+              <a class="brand-link" href="https://www.freshdirect.com/">
+                <img src="/Images/FreshDirect.jpeg" alt="FreshDirect" />
+              </a>
+              <p class="brand-name">FreshDirect</p>
+            </div>
+          </div>
+        </nav>
+
+        <footer></footer>
+      </main>
+    </div>
   </body>
 </html>
