--- a/index.html
+++ b/index.html
@@ -15,55 +15,59 @@
     <link rel="icon" type="jpg/jpeg/image" href="/Images/AZ.jpg" />
   </head>
   <body>
-    <header>
-      <a id="index" href="index.html"><h1 id="heading">Avélour Zénaire</h1></a>
-      <div id="intro">
-        Welcome to Avélour Zénaire<br />
-        Your gateway to a world where elegance meets ease. Step into a timeless
-        shopping experience, reimagined for the digital age — where every
-        product tells a story, Every click brings you closer to something
-        special, and every interaction feels personal. From curated collections
-        of premium brands to everyday essentials, We make shopping not just
-        convenient, but a delightful journey. Explore, connect, and let the
-        cloud bring a touch of luxury to your life.
-      </div>
-    </header>
-    <main>
-      <section class="type">
-        <h2 id="h2" class="category">AvélourLuxe</h2>
-        <h3 id="luxe" class="caption">
-          Where timeless elegance meets the finest craftsmanship.
-        </h3>
-        <a href="AvelourLuxe.html">
-          <img
-            class="logo"
-            src="/Images/AvelourLuxe.png"
-            alt="AvelourLuxe"
-            id="Luxury"
-          />
-        </a>
-      </section>
+    <div class="bg-container">
+      <header>
+        <a id="index" href="index.html"
+          ><h1 id="heading">Avélour Zénaire</h1></a
+        >
+        <div id="intro">
+          Welcome to Avélour Zénaire<br />
+          Your gateway to a world where elegance meets ease. Step into a
+          timeless shopping experience, reimagined for the digital age — where
+          every product tells a story, Every click brings you closer to
+          something special, and every interaction feels personal. From curated
+          collections of premium brands to everyday essentials, We make shopping
+          not just convenient, but a delightful journey. Explore, connect, and
+          let the cloud bring a touch of luxury to your life.
+        </div>
+      </header>
+      <main>
+        <section class="type">
+          <h2 id="h2" class="category">AvélourLuxe</h2>
+          <h3 id="luxe" class="caption">
+            Where timeless elegance meets the finest craftsmanship.
+          </h3>
+          <a href="AvelourLuxe.html">
+            <img
+              class="logo"
+              src="/Images/AvelourLuxe.png"
+              alt="AvelourLuxe"
+              id="Luxury"
+            />
+          </a>
+        </section>
 
-      <section class="type">
-        <h2 id="h3" class="category">AvélourFlow</h2>
-        <h3 id="flow" class="caption">
-          Everyday style, effortlessly within reach.
-        </h3>
-        <a href="/AvelourFlow.html">
-          <img class="logo" src="/Images/AvelourFlow.png" alt="AvelourFlow" />
-        </a>
-      </section>
+        <section class="type">
+          <h2 id="h3" class="category">AvélourFlow</h2>
+          <h3 id="flow" class="caption">
+            Everyday style, effortlessly within reach.
+          </h3>
+          <a href="/AvelourFlow.html">
+            <img class="logo" src="/Images/AvelourFlow.png" alt="AvelourFlow" />
+          </a>
+        </section>
 
-      <section class="type">
-        <h2 id="h4" class="category">AvélourDash</h2>
-        <h3 id="dash" class="caption">
-          Fresh essentials, delivered in a heartbeat.
-        </h3>
-        <a href="/AvelourDash.html">
-          <img class="logo" src="/Images/AvelourDash.png" alt="AvelourDash" />
-        </a>
-      </section>
-      <div id="extra"></div>
-    </main>
+        <section class="type">
+          <h2 id="h4" class="category">AvélourDash</h2>
+          <h3 id="dash" class="caption">
+            Fresh essentials, delivered in a heartbeat.
+          </h3>
+          <a href="/AvelourDash.html">
+            <img class="logo" src="/Images/AvelourDash.png" alt="AvelourDash" />
+          </a>
+        </section>
+        <div id="extra"></div>
+      </main>
+    </div>
   </body>
 </html>
